# Nextflow-Agentic-UI

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/models/: __init__.py  schemas.py
backend/api/routes/: containers.py  logs.py  workflows.py
backend/database/: __init__.py  crud.py  database.py  models.py
backend/rag/: __init__.py  knowledge_base.py
backend/services/: ai_agent.py  container_manager.py  log_monitor.py  workflow_manager.py
backend/tests/: test_placeholder.py
docs/: AI_TROUBLESHOOTING_DEMO.md  ARCHITECTURE.md
frontend/: .eslintrc.cjs  Dockerfile  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AIAssistant.jsx  ContainerPanel.jsx  Dashboard.jsx  KnowledgePanel.jsx  LogViewer.jsx  WorkflowDetail.jsx  WorkflowList.jsx  WorkflowRunner.jsx
monitoring/: Dockerfile  monitor.py
pipeline/: main.nf  nextflow.config
pipeline/modules/: fastqc.nf  featurecounts.nf  multiqc.nf  samtools.nf  star.nf  trimmomatic.nf
