[project]
name = "nextflow-agentic-ui-backend"
version = "1.0.0"
description = "FastAPI backend for Nextflow-Agentic-UI"
authors = [{ name = "Fatma Duran", email = "fatmaddurann@gmail.com" }]
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["api", "database", "services", "rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
